Replacing deprecated Class.newInstance with Class.getDeclaredConstruct().newInstance